style.css
/*
Theme Name: Twenty Seventeen MRC
Description: Child theme for cutomizing the Mohawk Reformed Church website
Author: M.R.C. community contributors
Template: twentyseventeen
*/

/* Custom CSS */
.content-wide {
  min-width: 100%;
}

@media screen and (min-width: 768px) {
  .contact-form-element, .contact-privacy-notice {
    display: inline-block;
  }
  .contact-form-element {
    width: 60%;
  }
  .contact-privacy-notice {
    width: 35%;
    vertical-align: middle;
    float: right;
    margin-top: 20%;
  }
}
@media screen and (max-width: 767px) {
  .contact-form-element, .contact-privacy-notice {
    display: block;
  }
}

.post-type-attr {
  padding-top: 1rem;
  border-top: 1px dashed #001B51;
}
.post-type-attr p {
  background-color: #ECFB11;
  font-style: italic;
  padding: 0.5rem;
}

.post-type-signature {
  text-align: center;
  margin-bottom: 0.75rem;
}

img.attachmnt-twentyseventeen-featured-image.wp-post-image, .page-template:not(.home) .single-featured-image-header > img.wp-post-image {
  height: 50vh;
  object-fit: cover;
}

@media screen and (min-width: 1000px) {
  article.type-post .entry-header.not-front {
    position: absolute;
    top: -575px;
    z-index: 3;
  }
}

.section-header-button {
  min-width: 100%;
  position: relative;
}
@media screen and (max-width: 479px) {
  .section-header-button {
    display: flex;
    flex-direction: column;
    margin-bottom: 1rem;
  }
}

@media screen and (min-width: 480px) {
  #home-blog-button {
    position: absolute;
    top: 0;
    right: 0;
  }
}
@media screen and (max-width: 479px) {
  #home-blog-button {
    align-self: center;
  }
}

article.type-post h1.entry-title {
  margin-bottom: 0;
}

#page #content {
  padding-top: 2rem;
}

.custom-header.static-header {
  min-height: 165px;
  max-height: 200px;
}

img.site-branding.static {
  padding: 0;
}

.entry-header.front-feed {
  position: relative;
}
.front-post-thumb {
  max-width: 300px;
  max-height: 180px;
  position: absolute;
}
@media screen and (min-width: 768px) {
  .front-post-thumb {
    left: -20rem;
    top: 0;
  }
}
@media screen and (max-width: 767px) {
  .entry-header.front-feed {
    display: flex;
    flex-direction: column;
  }
  .front-post-thumb {
    align-self: center;
    top: 6rem;
  }
  .entry-summary.front-feed:not(.no-thumb) {
    margin-top: 185px;
  }
  .entry-summary.front-feed:not(.no-thumb) > p:first-of-type {
    padding-top: 1rem;
    vertical-align: bottom;
  } 
}

.entry-content {
  position: relative;
}

@media screen and (min-width: 1000px) {
  .feed-post-listing > article.type-post.format-standard .entry-content, .feed-post-listing > article.type-post .entry-footer, .feed-post-listing > article.type-post+.comments-area, .feed-post-listing > article.type-post+.post-navigation, .feed-post-listing + .comments-area, .feed-post-listing ~ .post-navigation {
    position: relative;
    bottom: 232px;
  }
  /* Article text displaced over featured image, <main> reduced by 232px in JS */
  .feed-post-listing > article.type-post.format-standard .entry-content {
    padding: 1rem;
    background-color: rgba(255, 255, 255, 0.85);
  }
}

.donate-button form {
  text-align: center;
}
.donate-button br {
  display: none;
}
@media screen and (min-width: 1000px) {
  .donate-button {
    position: absolute;
    top: 1rem;
    left: 1rem;
    display: inline-block;
    max-width: 400px;
    vertical-align: middle
  }
  .fb_iframe_widget {
    float: right;
  }
}
@media screen and (max-width: 999px) {
  .donate-button, .fb_iframe_widget {
    display: block;
  }
  .donate-button-label {
    margin: 0 auto;
    padding-bottom: 1rem;
  }
  .fb_iframe_widget {
    margin: 0 auto;
  }
}

.donate-button-label {
  max-width: 300px;
  padding-top: 0.5rem;
}

.feed-entry-categories ul.post-categories {
  display: inline-block;
  vertical-align: top;
  margin: 0;
  list-style: none;
}

.feed-entry-categories > svg.icon, .feed-entry-tags > svg.icon {
  padding-right: 3px;
}

.feed-entry-wrap {
  margin-bottom: 0.5rem;
}

.feed-entry-date {
  text-align: right;
  margin-bottom: 0.5rem;
  margin-right: 0.25rem;
}

.feed-entry-title {
  margin-bottom: 0;
}

.feed-entry-categories, .feed-entry-tags {
  text-indent: -15px;
  padding-left: 15px;
}
.feed-entry-categories {
  margin-left: 0.25rem;
}
.feed-entry-tags {
  margin-right: 0.25rem;
}

.feed-entry-categories a, .feed-entry-tags a {
  font-style: italic;
  -webkit-transition: color 80ms ease-in, -webkit-box-shadow 130ms ease-in-out;
  transition: color 80ms ease-in, -webkit-box-shadow 130ms ease-in-out;
  transition: color 80ms ease-in, box-shadow 130ms ease-in-out;
  transition: color 80ms ease-in, box-shadow 130ms ease-in-out, -webkit-box-shadow 130ms ease-in-out;
}
.feed-entry-title a {
  -webkit-transition: color 80ms ease-in, -webkit-box-shadow 130ms ease-in-out;
  transition: color 80ms ease-in, -webkit-box-shadow 130ms ease-in-out;
  transition: color 80ms ease-in, box-shadow 130ms ease-in-out;
  transition: color 80ms ease-in, box-shadow 130ms ease-in-out, -webkit-box-shadow 130ms ease-in-out;
}
.feed-entry-categories a:hover, .feed-entry-tags a:hover, .feed-entry-title a:hover {
  color: #000;
  -webkit-box-shadow: inset 0 0 0 rgba(0, 0, 0, 0), 0 3px 0 rgba(0, 0, 0, 1);
  box-shadow: inset 0 0 0 rgba(0, 0, 0, 0), 0 3px 0 rgba(0, 0, 0, 1);
}

@media screen and (min-width: 768px) {
  .feed-entry-wrap {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
  }
}
@media screen and (min-width: 480px) {
  .feed-entry-date {
    font-size: 1.25rem;
  }
}

ul.menu-blog li:nth-of-type(2) {
  border-right: 1px solid #E5F0F7;
}
#top-menu:not(.menu-blog) li:last-of-type {
  border-left: 1px solid #E5F0F7;
}

.site-closer a, .site-closer p {
  margin-top: 1rem;
}

.es_caption {
  padding-bottom: 0;
}

.button-link {
  border: 0;
  -webkit-border-radius: 2px;
  border-radius: 2px;
  -webkit-box-shadow: none;
  box-shadow: none;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-size: 0.875rem;
  font-weight: 800;
  line-height: 1;
  padding: 1em 2em;
  text-shadow: none;
  -webkit-transition: background 0.2s;
  transition: background 0.2s;
}

